Rediger på core pom